[gd_scene load_steps=4 format=3 uid="uid://esvia3p838gn"]

[ext_resource type="Script" path="res://objects/CharacterBody2D.gd" id="1_fa3mf"]
[ext_resource type="Texture2D" uid="uid://6lhplqt4kgj5" path="res://objects/ship.png" id="2_cjtv3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8x2ub"]
radius = 27.0
height = 96.0

[node name="Ship" type="CharacterBody2D"]
collision_mask = 26
script = ExtResource("1_fa3mf")

[node name="shipimg" type="Sprite2D" parent="."]
scale = Vector2(0.55, 0.55)
texture = ExtResource("2_cjtv3")
metadata/_edit_lock_ = true

[node name="dashtime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="lasertime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="bombtime" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="iframes" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="laserstart" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="mark1" type="Marker2D" parent="laserstart"]
position = Vector2(-1, -52)

[node name="mark2" type="Marker2D" parent="laserstart"]
position = Vector2(-4, -50)

[node name="mark3" type="Marker2D" parent="laserstart"]
position = Vector2(3, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8x2ub")
one_way_collision_margin = 0.0

[connection signal="timeout" from="dashtime" to="." method="_on_dashtime_timeout"]
[connection signal="timeout" from="lasertime" to="." method="_on_lasertime_timeout"]
[connection signal="timeout" from="bombtime" to="." method="_on_bomtime_timeout"]
[connection signal="timeout" from="iframes" to="." method="_on_iframes_timeout"]
